03/11/2005
----------
1. fix the bug that default sort for new user was not properly set
   to 'date_rev'
2. Korean language file translation minor update
   (thanks to Sungjun Park, psj.AT.soosan.co.kr)
3. Danish language, templates and htmlarea files translation update
   (thanks to Gunner Poulsen, gp.AT.lyngbjerggaardskolen.dk)


03/10/2005
----------
1. minor change to buffer_index() code in maildb.pl which makes great
   improvement :)
   a. the indexing speed is about 2 times faster than before
   b. the memory usage is basicly foldersize/messagesize independent
   c. the cpu usage is much less than before
2. typo correction for string Ascending and Descending in language files


03/09/2005
----------
1. support using either SentDate and Received Date as message timestamp
2. messagelist code clean
3. calculate message age based on its received date so messages with long
   transmission delay won't be removed soon by clean_trash_spamvirus()
4. show transmission delay as the tips of messagelist date field


03/08/2005
----------
1. change the field order in folderdb and add the recvdate field.
   The is preparation for recvdate display support in messagelist
ps: The folderdb will be upgraded to new format automatically when being accessed
    However, the sysadm may upgrade the folderdb for all users explicitly by

       /path_to.../openwebmail-tool.pl -i -a

    so the users won't be waiting the db conversion in using webmail
2. rename option deliver_use_GMT to deliver_use_gmt or it won't be recognized
   by conf parser


03/07/2005
----------
1. fix error "There is no file named "/tmp/nonexistance" main::readadrbook ..."
   which happened in saving contact to abook with nonalphabet in in abookname


03/06/2004
----------
1. fix the bug that DEFAULT_charset and DEFAULT_fscharset didn't lock the
   related field in preference.
   (reported by Florian Effenberger, floeff.AT.arcor.de)
2. fix a bug in readmessage that smartdestination was not correctly