@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.51
-releasedate		20050311
+releasedate		20050315
 
 ##############################################################################
 # host dependent configuration
