@@ -1,7 +1,7 @@
 <table border="0" align="center" width="90%" cellpadding="1" cellspacing="0">
 <tr><td bgcolor=@@@TITLEBAR@@@>
 <font color=@@@TITLEBAR_TEXT@@@ face=@@@FONTFACE@@@ size="3">
-<B>About</B></font>
+<B>Om</B></font>
 </td></tr>
 <tr><td bgcolor=@@@MENUBAR@@@>
 @@@MENUBARLINKS@@@
@@ -17,7 +17,7 @@
 @@@INFOSOFTWAREEND@@@
 
 @@@INFOPROTOCOLSTART@@@
-<tr><td colspan=2 bgcolor=@@@COLUMNHEADER@@@><B>PROTOCOL</B></td></tr>
+<tr><td colspan=2 bgcolor=@@@COLUMNHEADER@@@><B>PROTOKOL</B></td></tr>
 @@@INFOPROTOCOL@@@
 <tr><td colspan=2>&nbsp;</td></tr>
 @@@INFOPROTOCOLEND@@@
@@ -29,7 +29,7 @@
 @@@INFOSERVEREND@@@
 
 @@@INFOCLIENTSTART@@@
-<tr><td colspan=2 bgcolor=@@@COLUMNHEADER@@@><B>CLIENT</B></td></tr>
+<tr><td colspan=2 bgcolor=@@@COLUMNHEADER@@@><B>KLIENT</B></td></tr>
 @@@INFOCLIENT@@@
 @@@INFOCLIENTEND@@@
 
