@@ -270,6 +270,13 @@ Please use mirror sites near you to avoid overload on official sites!
   <td><a href="#email" title="dani.radulescu.AT.astral.ro">Dani Radulescu</a></td>
   </tr>
 
+  <tr>
+  <td>25</td>
+  <td><a href="http://owm.opensourcerules.net/">http://owm.opensourcerules.net/</a></td>
+  <td>Raleigh, NC</td>
+  <td><a href="#email" title="sam.AT.opensourcerules.net">Sam Gates</a></td>
+  </tr>
+
   </tbody></table>
   <p></p>
 </blockquote>
